--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="nav"><a id="start" href="session.html">スタート</a></div>
-    <div class="options">入力 : 
+    <div class="options">入力　: 
         <select id="inputOption">
             <option value="hira">ひらがな</option>
             <option value="roma">ローマ字</option>
         </select>
         <br>
-        フアスト　モデ :
+        フアスト　モド　:
         <input type="checkbox" id="fastMode" checked>
     </div>
 </body>
