--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <option value="roma">ローマ字</option>
         </select>
         <br>
-        フアスト　モド　:
+        ファスト モード　:
         <input type="checkbox" id="fastMode" checked>
     </div>
 </body>
